<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="368dp"
        android:layout_height="502dp"
        android:layout_below="@+id/toolbar1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_usuario_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="124dp"
                android:ems="10"
                android:hint="@string/txt_usuario"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_clave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_clave"
                android:inputType="textPassword"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_usuario_registro" />

            <EditText
                android:id="@+id/txt_nombre_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_nombre"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_clave" />

            <EditText
                android:id="@+id/txt_apellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_apellido"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_nombre_registro" />

            <EditText
                android:id="@+id/txt_email_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_apellido" />

            <EditText
                android:id="@+id/txt_celular_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_celular"
                android:inputType="number"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_email_registro" />

            <Button
                android:id="@+id/btn_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:onClick="tomarFoto"
                android:text="@string/btn_foto"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_celular_registro" />

            <ImageView
                android:id="@+id/imag_view_foto"
                android:layout_width="159dp"
                android:layout_height="191dp"
                android:layout_marginStart="80dp"
                app:layout_constraintStart_toEndOf="@+id/btn_foto"
                app:layout_constraintTop_toBottomOf="@+id/txt_celular_registro" />

            <TextView
                android:id="@+id/txt_genero_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_genero"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_foto" />

            <RadioGroup
                android:layout_width="155dp"
                android:layout_height="47dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_genero_registro">

                <RadioButton
                    android:id="@+id/rb_femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb_genero2"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb_genero1"
                    android:textSize="18sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/txt_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_fecha"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/scrollView"
                tools:layout_editor_absoluteX="16dp" />

            <LinearLayout
                android:layout_width="191dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner_dia"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinner_mes"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinner_ano"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_asignaturas_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_asignaturas"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_dia" />

            <CheckBox
                android:id="@+id/checkBoxAnalisis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/chbox_analisis"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/checkBoxMatematicas"
                app:layout_constraintTop_toBottomOf="@+id/txt_asignaturas_registro" />

            <CheckBox
                android:id="@+id/checkBoxMatematicas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/chbox_matematicas"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_asignaturas_registro" />

            <CheckBox
                android:id="@+id/checkBoxFisica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/chbox_fisica"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/checkBoxAnalisis"
                app:layout_constraintTop_toBottomOf="@+id/txt_asignaturas_registro" />

            <CheckBox
                android:id="@+id/checkBoxAlgebra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/chbox_algebra"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxMatematicas" />

            <CheckBox
                android:id="@+id/checkBoxLenguaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/chbox_lenguaje"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/checkBoxAlgebra"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxAnalisis" />

            <Switch
                android:id="@+id/switchBeca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/switch_beca"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxLenguaje" />

            <Button
                android:id="@+id/btn_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="128dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="248dp"
                android:onClick="guardar"
                android:text="@string/btn_guardar"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="433dp" />

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark" />

</android.support.constraint.ConstraintLayout>